Fixed a11y link colours in dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,7 +44,7 @@
     }
 
     a {
-        @apply text-blue-600 dark:text-blue-500 underline underline-offset-1;
+        @apply text-blue-600 dark:text-blue-300 dark:decoration-blue-300 underline underline-offset-1;
     }
 
     nav a {
